--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -18,12 +18,20 @@ text-align : center;
 /* Homepage Slider image */
 .bigSlider{
 width : 100%;
-height : 480px;
+height : 360px;
 background-color : tomato;
 position : relative;
 float:left;
 
 
+}
+
+.textSlider{
+font-family:url('fonts/corporea.TFF');
+font-size:4em;
+padding-top:260px;
+font-color:#ffffff;
+padding-left:1em;
 }
 
 .bigSliderPages{
