--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -148,11 +148,12 @@ font-size : 144%;
 width : 100%;
 height : 100px;
 background-color : tomato;
-position : relative;
+position : fixed;
 float : left;
 text-align : center;
 font-size : 160%;
 color : white;
+bottom:0;
 }
 
 
