--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -1,3 +1,10 @@
+/* Fonts */
+@font-face {
+    font-family: corporea;
+    src: url("fonts/corporea.ttf");
+}
+
+/* Start CSS */
 #insImageFr {
 width : 300px;
 height : 300px;
@@ -27,10 +34,10 @@ float:left;
 }
 
 .textSlider{
-font-family:url('fonts/corporea.TFF');
-font-size:4em;
+font-family:"corporea";
+font-size:5em;
 padding-top:260px;
-font-color:#ffffff;
+color:#ffffff;
 padding-left:1em;
 }
 
