--- a/CMS/css/foundation.css
+++ b/CMS/css/foundation.css
@@ -1112,11 +1112,11 @@ button, .button {
   button.secondary, .button.secondary {
     background-color: #e7e7e7;
     border-color: #b9b9b9;
-    color: #333333; }
+    color: #e55940; }
     button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
       background-color: #b9b9b9; }
     button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
-      color: #333333; }
+      color: #e55940; }
   button.success, .button.success {
     background-color: #43ac6a;
     border-color: #368a55;
@@ -1144,7 +1144,7 @@ button, .button {
   button.info, .button.info {
     background-color: #a0d3e8;
     border-color: #61b6d9;
-    color: #333333; }
+    color: #e55940; }
     button.info:hover, button.info:focus, .button.info:hover, .button.info:focus {
       background-color: #61b6d9; }
     button.info:hover, button.info:focus, .button.info:hover, .button.info:focus {
@@ -1197,14 +1197,14 @@ button, .button {
     button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
       background-color: #e7e7e7;
       border-color: #b9b9b9;
-      color: #333333;
+      color: #e55940;
       cursor: default;
       opacity: 0.7;
       box-shadow: none; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
         background-color: #b9b9b9; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
-        color: #333333; }
+        color: #e55940; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
         background-color: #e7e7e7; }
     button.disabled.success, button[disabled].success, .button.disabled.success, .button[disabled].success {
@@ -1249,7 +1249,7 @@ button, .button {
     button.disabled.info, button[disabled].info, .button.disabled.info, .button[disabled].info {
       background-color: #a0d3e8;
       border-color: #61b6d9;
-      color: #333333;
+      color: #e55940;
       cursor: default;
       opacity: 0.7;
       box-shadow: none; }
@@ -1384,13 +1384,13 @@ select::-ms-expand {
 span.prefix, label.prefix {
   background: #f2f2f2;
   border-right: none;
-  color: #333333;
+  color: #e55940;
   border-color: #cccccc; }
 
 span.postfix, label.postfix {
   background: #f2f2f2;
   border-left: none;
-  color: #333333;
+  color: #e55940;
   border-color: #cccccc; }
 
 /* We use this to get basic styling on all basic form elements */
@@ -1742,7 +1742,7 @@ meta.foundation-mq-topbar {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #333333; }
+  background: #e55940; }
   .contain-to-grid .top-bar {
     margin-bottom: 0; }
 
@@ -1770,7 +1770,8 @@ meta.foundation-mq-topbar {
   height: 60px;
   line-height: 60px;
   position: relative;
-  background: #333333;
+  background: #e55940;
+  opacity:0.7;
   margin-bottom: 0; }
   .top-bar ul {
     margin-bottom: 0;
@@ -1850,7 +1851,7 @@ meta.foundation-mq-topbar {
     height: auto;
     background: transparent; }
     .top-bar.expanded .title-area {
-      background: #333333; }
+      background: "#e55940es"; }
     .top-bar.expanded .toggle-topbar a {
       color: #888888; }
       .top-bar.expanded .toggle-topbar a span::after {
@@ -1875,7 +1876,7 @@ meta.foundation-mq-topbar {
     height: 1px;
     width: 100%; }
   .top-bar-section ul li {
-    background: #333333; }
+    background: "#e55940es"; }
     .top-bar-section ul li > a {
       display: block;
       width: 100%;
@@ -1900,11 +1901,11 @@ meta.foundation-mq-topbar {
       .top-bar-section ul li > a.button.secondary {
         background-color: #e7e7e7;
         border-color: #b9b9b9;
-        color: #333333; }
+        color: #e55940; }
         .top-bar-section ul li > a.button.secondary:hover, .top-bar-section ul li > a.button.secondary:focus {
           background-color: #b9b9b9; }
         .top-bar-section ul li > a.button.secondary:hover, .top-bar-section ul li > a.button.secondary:focus {
-          color: #333333; }
+          color: #e55940; }
       .top-bar-section ul li > a.button.success {
         background-color: #43ac6a;
         border-color: #368a55;
@@ -1943,11 +1944,11 @@ meta.foundation-mq-topbar {
       .top-bar-section ul li > button.secondary {
         background-color: #e7e7e7;
         border-color: #b9b9b9;
-        color: #333333; }
+        color: #e55940; }
         .top-bar-section ul li > button.secondary:hover, .top-bar-section ul li > button.secondary:focus {
           background-color: #b9b9b9; }
         .top-bar-section ul li > button.secondary:hover, .top-bar-section ul li > button.secondary:focus {
-          color: #333333; }
+          color: #e55940; }
       .top-bar-section ul li > button.success {
         background-color: #43ac6a;
         border-color: #368a55;
@@ -2058,7 +2059,7 @@ meta.foundation-mq-topbar {
 
 @media only screen and (min-width: 40.063em) {
   .top-bar {
-    background: #333333;
+    background: "#e55940es";
     overflow: visible; }
     .top-bar:before, .top-bar:after {
       content: " ";
@@ -2078,7 +2079,7 @@ meta.foundation-mq-topbar {
       position: relative;
       top: 7px; }
     .top-bar.expanded {
-      background: #333333; }
+      background: #e55940; }
 
   .contain-to-grid .top-bar {
     max-width: 62.5rem;
@@ -2103,7 +2104,7 @@ meta.foundation-mq-topbar {
     .top-bar-section li:not(.has-form) a:not(.button) {
       padding: 0 15px;
       line-height: 60px;
-      background: #333333; }
+      background: #e55940; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
         background-color: #555555;
         background: #272727; }
@@ -2169,17 +2170,17 @@ meta.foundation-mq-topbar {
         line-height: 60px;
         white-space: nowrap;
         padding: 12px 15px;
-        background: #333333; }
+        background: #e55940; }
       .top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
         color: white;
-        background: #333333; }
+        background: #e55940; }
       .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
         color: white;
         background-color: #555555;
         background: #272727; }
       .top-bar-section .dropdown li label {
         white-space: nowrap;
-        background: #333333; }
+        background: #e55940; }
       .top-bar-section .dropdown li .dropdown {
         left: 100%;
         top: 0; }
@@ -2191,7 +2192,7 @@ meta.foundation-mq-topbar {
       height: 60px;
       width: 0; }
     .top-bar-section .has-form {
-      background: #333333;
+      background: #e55940;
       padding: 0 15px;
       height: 60px; }
     .top-bar-section .right li .dropdown {
@@ -2252,10 +2253,10 @@ meta.foundation-mq-topbar {
       color: #008cba; }
     .breadcrumbs > *.current {
       cursor: default;
-      color: #333333; }
+      color: #e55940; }
       .breadcrumbs > *.current a {
         cursor: default;
-        color: #333333; }
+        color: #e55940; }
       .breadcrumbs > *.current:hover, .breadcrumbs > *.current:hover a, .breadcrumbs > *.current:focus, .breadcrumbs > *.current:focus a {
         text-decoration: none; }
     .breadcrumbs > *.unavailable {
@@ -2302,7 +2303,7 @@ meta.foundation-mq-topbar {
     top: 50%;
     margin-top: -0.6875rem;
     right: 0.25rem;
-    color: #333333;
+    color: #e55940;
     opacity: 0.3; }
     .alert-box .close:hover, .alert-box .close:focus {
       opacity: 0.5; }
@@ -2731,13 +2732,13 @@ meta.foundation-mq-topbar {
   margin-bottom: 1.25rem;
   padding: 1.25rem;
   background: #f2f2f2;
-  color: #333333; }
+  color: #e55940; }
   .panel > :first-child {
     margin-top: 0; }
   .panel > :last-child {
     margin-bottom: 0; }
   .panel h1, .panel h2, .panel h3, .panel h4, .panel h5, .panel h6, .panel p, .panel li, .panel dl {
-    color: #333333; }
+    color: #e55940; }
   .panel h1, .panel h2, .panel h3, .panel h4, .panel h5, .panel h6 {
     line-height: 1;
     margin-bottom: 0.625rem; }
@@ -2750,13 +2751,13 @@ meta.foundation-mq-topbar {
     margin-bottom: 1.25rem;
     padding: 1.25rem;
     background: #ecfaff;
-    color: #333333; }
+    color: #e55940; }
     .panel.callout > :first-child {
       margin-top: 0; }
     .panel.callout > :last-child {
       margin-bottom: 0; }
     .panel.callout h1, .panel.callout h2, .panel.callout h3, .panel.callout h4, .panel.callout h5, .panel.callout h6, .panel.callout p, .panel.callout li, .panel.callout dl {
-      color: #333333; }
+      color: #e55940; }
     .panel.callout h1, .panel.callout h2, .panel.callout h3, .panel.callout h4, .panel.callout h5, .panel.callout h6 {
       line-height: 1;
       margin-bottom: 0.625rem; }
@@ -2810,7 +2811,7 @@ meta.foundation-mq-topbar {
     .dropdown.button.large:after, button.dropdown.large:after {
       border-color: white transparent transparent transparent; }
   .dropdown.button.secondary:after, button.dropdown.secondary:after {
-    border-color: #333333 transparent transparent transparent; }
+    border-color: #e55940 transparent transparent transparent; }
 
 /* Image Thumbnails */
 .th {
@@ -2826,7 +2827,7 @@ meta.foundation-mq-topbar {
     border-radius: 3px; }
 
 .toolbar {
-  background: #333333;
+  background: #e55940;
   width: 100%;
   font-size: 0;
   display: inline-block; }
@@ -2882,7 +2883,7 @@ meta.foundation-mq-topbar {
     list-style: none;
     line-height: 1; }
   .pricing-table .title {
-    background-color: #333333;
+    background-color: #e55940;
     padding: 0.9375rem 1.25rem;
     text-align: center;
     color: #eeeeee;
@@ -2893,7 +2894,7 @@ meta.foundation-mq-topbar {
     background-color: #f6f6f6;
     padding: 0.9375rem 1.25rem;
     text-align: center;
-    color: #333333;
+    color: #e55940;
     font-weight: normal;
     font-size: 2rem;
     font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; }
@@ -2910,7 +2911,7 @@ meta.foundation-mq-topbar {
     background-color: white;
     padding: 0.9375rem;
     text-align: center;
-    color: #333333;
+    color: #e55940;
     font-size: 0.875rem;
     font-weight: normal;
     border-bottom: dotted 1px #dddddd; }
@@ -3058,7 +3059,7 @@ meta.foundation-mq-topbar {
       border-color: transparent;
       border-left-color: white; }
       .orbit-container .orbit-timer.paused > span.dark {
-        border-left-color: #333333; }
+        border-left-color: #e55940; }
   .orbit-container:hover .orbit-timer > span {
     display: block; }
   .orbit-container .orbit-prev,
@@ -3175,7 +3176,7 @@ meta.foundation-mq-topbar {
   width: 100%;
   font-size: 0;
   display: inline-block;
-  background: #333333; }
+  background: #e55940; }
   .icon-bar > * {
     text-align: center;
     font-size: 1rem;
@@ -3731,7 +3732,7 @@ small {
 code {
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: normal;
-  color: #333333;
+  color: #e55940;
   background-color: #f8f8f8;
   border-width: 1px;
   border-style: solid;
@@ -4010,7 +4011,7 @@ blockquote p {
   .split.button.expand {
     padding-left: 2rem; }
   .split.button.secondary span:after {
-    border-color: #333333 transparent transparent transparent; }
+    border-color: #e55940 transparent transparent transparent; }
   .split.button.radius span {
     -webkit-border-bottom-right-radius: 3px;
     -webkit-border-top-right-radius: 3px;
@@ -4157,7 +4158,7 @@ dialog {
   border-bottom: dotted 1px #cccccc;
   cursor: help;
   font-weight: bold;
-  color: #333333; }
+  color: #e55940; }
   .has-tip:hover, .has-tip:focus {
     border-bottom: dotted 1px #003f54;
     color: #008cba; }
@@ -4176,7 +4177,7 @@ dialog {
   left: 50%;
   width: 100%;
   color: white;
-  background: #333333; }
+  background: #e55940; }
   .tooltip > .nub {
     display: block;
     left: 5px;
@@ -4184,7 +4185,7 @@ dialog {
     width: 0;
     height: 0;
     border: solid 5px;
-    border-color: transparent transparent #333333 transparent;
+    border-color: transparent transparent #e55940 transparent;
     top: -10px;
     pointer-events: none; }
     .tooltip > .nub.rtl {
@@ -4208,22 +4209,22 @@ dialog {
 
 @media only screen and (min-width: 40.063em) {
   .tooltip > .nub {
-    border-color: transparent transparent #333333 transparent;
+    border-color: transparent transparent #e55940 transparent;
     top: -10px; }
   .tooltip.tip-top > .nub {
-    border-color: #333333 transparent transparent transparent;
+    border-color: #e55940 transparent transparent transparent;
     top: auto;
     bottom: -10px; }
   .tooltip.tip-left, .tooltip.tip-right {
     float: none !important; }
   .tooltip.tip-left > .nub {
-    border-color: transparent transparent transparent #333333;
+    border-color: transparent transparent transparent #e55940;
     right: -10px;
     left: auto;
     top: 50%;
     margin-top: -5px; }
   .tooltip.tip-right > .nub {
-    border-color: transparent #333333 transparent transparent;
+    border-color: transparent #e55940 transparent transparent;
     right: auto;
     left: -10px;
     top: 50%;
@@ -4245,7 +4246,7 @@ dialog {
     margin-right: 0; }
 
 .clearing-blackout {
-  background: #333333;
+  background: #e55940;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -4287,7 +4288,7 @@ dialog {
   margin-bottom: 0;
   text-align: center;
   bottom: 0;
-  background: #333333;
+  background: #e55940;
   width: 100%;
   padding: 10px 30px 20px;
   position: absolute;
@@ -4388,7 +4389,7 @@ dialog {
         .clearing-assembled .clearing-container .carousel > ul li:hover {
           opacity: 0.8; }
   .clearing-assembled .clearing-container .visible-img {
-    background: #333333;
+    background: #e55940;
     overflow: hidden;
     height: 85%; }
 
@@ -4483,7 +4484,7 @@ dialog {
 .joyride-tip-guide {
   display: none;
   position: absolute;
-  background: #333333;
+  background: #e55940;
   color: white;
   z-index: 101;
   top: 0;
@@ -4512,17 +4513,17 @@ dialog {
   left: 22px;
   width: 0;
   height: 0;
-  border: 10px solid #333333; }
+  border: 10px solid #e55940; }
   .joyride-tip-guide .joyride-nub.top {
     border-top-style: solid;
-    border-color: #333333;
+    border-color: #e55940;
     border-top-color: transparent !important;
     border-left-color: transparent !important;
     border-right-color: transparent !important;
     top: -20px; }
   .joyride-tip-guide .joyride-nub.bottom {
     border-bottom-style: solid;
-    border-color: #333333 !important;
+    border-color: #e55940 !important;
     border-bottom-color: transparent !important;
     border-left-color: transparent !important;
     border-right-color: transparent !important;
@@ -4608,13 +4609,13 @@ dialog {
     width: 300px;
     left: inherit; }
     .joyride-tip-guide .joyride-nub.bottom {
-      border-color: #333333 !important;
+      border-color: #e55940 !important;
       border-bottom-color: transparent !important;
       border-left-color: transparent !important;
       border-right-color: transparent !important;
       bottom: -20px; }
     .joyride-tip-guide .joyride-nub.right {
-      border-color: #333333 !important;
+      border-color: #e55940 !important;
       border-top-color: transparent !important;
       border-right-color: transparent !important;
       border-bottom-color: transparent !important;
@@ -4622,7 +4623,7 @@ dialog {
       left: auto;
       right: -20px; }
     .joyride-tip-guide .joyride-nub.left {
-      border-color: #333333 !important;
+      border-color: #e55940 !important;
       border-top-color: transparent !important;
       border-left-color: transparent !important;
       border-bottom-color: transparent !important;
@@ -4658,10 +4659,10 @@ dialog {
     color: white; }
   .label.secondary {
     background-color: #e7e7e7;
-    color: #333333; }
+    color: #e55940; }
   .label.info {
     background-color: #a0d3e8;
-    color: #333333; }
+    color: #e55940; }
 
 .off-canvas-wrap {
   -webkit-backface-visibility: hidden;
@@ -4689,7 +4690,7 @@ dialog {
 
 .tab-bar {
   -webkit-backface-visibility: hidden;
-  background: #333333;
+  background: #e55940;
   color: white;
   height: 2.8125rem;
   line-height: 2.8125rem;
@@ -4767,7 +4768,7 @@ dialog {
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #333333;
+  background: #e55940;
   z-index: 1001;
   box-sizing: content-box;
   transition: transform 500ms ease 0s;
@@ -4791,7 +4792,7 @@ dialog {
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #333333;
+  background: #e55940;
   z-index: 1001;
   box-sizing: content-box;
   transition: transform 500ms ease 0s;
@@ -4974,7 +4975,7 @@ ul.off-canvas-list {
   margin: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #333333;
+  background: #e55940;
   z-index: 1002;
   box-sizing: content-box;
   -webkit-overflow-scrolling: touch;
@@ -5026,7 +5027,7 @@ ul.off-canvas-list {
   margin: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #333333;
+  background: #e55940;
   z-index: 1002;
   box-sizing: content-box;
   -webkit-overflow-scrolling: touch;
