--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -152,14 +152,15 @@ font-size : 144%;
 
 .bigFooter{
 width : 100%;
-height : 80px;
+height : 60px;
 background-color : tomato;
 position : fixed;
 float : left;
 text-align : center;
-font-size : 130%;
+font-size : 120%;
 color : white;
 bottom:0;
+padding:1em;
 }
 
 
