--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -26,7 +26,7 @@ text-align : center;
 .bigSlider{
 width : 100%;
 height : 320px;
-background-color : tomato;
+background-color : #E64A19;
 position : relative;
 float:left;
 background:url('image/pattern.png');
@@ -54,7 +54,7 @@ background-repeat:no-repeat;
 .bigSliderPages{
 width : 100%;
 height : 360px;
-background-color : tomato;
+background-color : #E64A19;
 position : relative;
 float:left;
 
@@ -95,8 +95,8 @@ height : auto;
 background-color : white;
 position : relative;
 float : left;
-border : solid tomato 5px;
-border-color : tomato;
+border : solid #E64A19 5px;
+border-color : #E64A19;
 
 font-size : 180%;
 
@@ -136,7 +136,7 @@ margin-top : 50px;
 .pieceProductImage{
 width : 300px;
 height : 300px;
-background-color : tomato;
+background-color : #E64A19;
 position : relative;
 float : left;
 
@@ -165,7 +165,7 @@ font-size : 144%;
 .bigFooter{
 width : 100%;
 height : 60px;
-background-color : tomato;
+background-color : #E64A19;
 position : fixed;
 float : left;
 text-align : center;
