--- a/CMS/css/nday.css
+++ b/CMS/css/nday.css
@@ -33,7 +33,9 @@ height : auto;
 background-color : #E64A19;
 position : relative;
 float:left;
-background:url('image/pattern.png');
+background:url('image/background.jpg');
+background-repeat:no-repeat;
+background-size:cover;
 }
 
 
